--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "4.13.3"
+    "body-parser": "^1.14.2",
+    "express": "4.13.3",
+    "multer": "^1.1.0"
   },
   "engines": {
     "node": "0.12.7"
