--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "Node.js Getting Started",
-  "description": "A barebones Node.js app using Express 4",
-  "repository": "https://github.com/heroku/node-js-getting-started",
+  "name": "battleships-bot",
+  "description": "bot for xpman battleships bot tournament",
+  "repository": "https://github.com/vincelee888/battleships.git",
   "logo": "http://node-js-sample.herokuapp.com/node.svg",
-  "keywords": ["node", "express", "static"],
+  "keywords": [],
   "image": "heroku/nodejs"
 }
