--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "4.13.3"
+    "express": "4.13.3",
+    "lodash": "^3.10.1"
   },
   "engines": {
     "node": "0.12.7"
