added gulp tasks

--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
     "bot",
     "xpman"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-jasmine": "^2.2.1",
+    "gulp-jshint": "^2.0.0",
+    "jshint": "^2.8.0"
+  }
 }
